cargo-features = ["edition2021"]

[package]
name = "lurlene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lurlene"
path = "src/lib.rs"

[[bin]]
name = "lurlene"
path = "src/bin/main.rs"

[dependencies]

