cargo-features = ["edition2021"]

[package]
name = "lurlene"
version = "0.1.0"
edition = "2021"

[lib]
name = "lurlene"
path = "src/lib.rs"

[[bin]]
name = "lurlene"
path = "src/bin/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9.0"

